ecmascript/parser/tests/typescript-errors/type-only-import-specifier/invalid-type-only-local-with-imported/input.ts
import { type as as export } from 'mod'
